Print more detailed test status
This way, we have actionable things in the travis output
if and when anything goes wrong.

--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,12 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
+// We want to print all the tests that fail, so that Travis will show us actionable output
+// if anything dies.
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat = 'full'
+    }
+}
