Removed leftover debug flag on bash

--- a/bin/build
+++ b/bin/build
@@ -1,4 +1,4 @@
-#!/bin/bash -x
+#!/bin/bash
 
 # Find the directory containing this script, so that executing the
 # script works as expected if the project directory isn't the CWD.
