Add the gradle application plugin; define our main class

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
+// Apply the application plugin and set our main class
+apply plugin: 'application'
+mainClassName = 'is.ru.tictactoe.Main'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
