Back to uberjar

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
-//plugins {
+plugins {
     // Add the shadow plugin, so that we can create uberjar releases
     // that package all their dependencies
-//    id "com.github.johnrengelman.shadow" version "1.2.3"
-//}
+    id "com.github.johnrengelman.shadow" version "1.2.3"
+}
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
@@ -45,19 +45,19 @@ test {
     }
 }
 
-//task stage(dependsOn: ['clean', 'shadowJar'])
+task stage(dependsOn: ['clean', 'shadowJar'])
 
 // This task is needed by Heroku
-task stage {
-    dependsOn build
-}
+//task stage {
+//    dependsOn build
+//}
 
 // This task copies dependencies that are pulled down from Maven
 // and copies into a directory specified in Procfile
-task copyToLib(type: Copy) {
-    into "$buildDir/libs"
-    from(configurations.compile)
-}
-stage.dependsOn(copyToLib)
+//task copyToLib(type: Copy) {
+//    into "$buildDir/libs"
+//    from(configurations.compile)
+//}
+//stage.dependsOn(copyToLib)
 
 
