--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
+// Use Jacoco for code coverage testing
+apply plugin: 'jacoco'
+
 // We want to use Java 8
 sourceCompatibility = 1.8
 
@@ -47,3 +50,13 @@ test {
 
 task stage(dependsOn: ['clean', 'shadowJar'])
 
+
+// Enable XML report
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
+// And run jacoco during check phase
+check.dependsOn jacocoTestReport
