Work damn Codecov crap

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ task stage(dependsOn: ['clean', 'shadowJar'])
 jacocoTestReport {
     reports {
         xml.enabled true
+        csv.enabled false
+        html.destination "${buildDir}/reports/coverage"
     }
 }
 
