--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,11 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.21'
-
     // The web ui uses Spark
     compile "com.sparkjava:spark-core:2.5"
+
+    // The production code uses the SLF4J logging API at compile time
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
