Add command-line arguments to decide if to run web or cli app

--- a/build.gradle
+++ b/build.gradle
@@ -67,4 +67,7 @@ check.dependsOn jacocoTestReport
 // Add support for system.in during runtime of java application
 run{
     standardInput = System.in
+    if ( project.hasProperty("appArgs") ) {
+        args Eval.me(appArgs)
+    }
 }
