--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,9 @@ dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
 
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
+    // junit for tests; mockito for mocks
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.+"
 }
 
 // We want to print all the tests that fail, so that Travis will show us actionable output
