Update the ruby used

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script: bin/build
 
 # We need to update Ruby in our build container, so that we can generate jekyll sites
 before_install:
-- rvm install 2.1.5
+- rvm install 2.3.0 --binary
 
 # After every successful build, we want to run coverage reports and maybe deploy the documentation
 after_success:
