Fix baseurl + url

--- a/docs/site/_config.yml
+++ b/docs/site/_config.yml
@@ -16,8 +16,8 @@
 title: TicTacToe
 description: > # this means to ignore newlines until "baseurl:"
   TicTacToes developer central
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/TicTacToe" # the subpath of your site, e.g. /blog
+url: "https://hundarogborn.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  hundarogborn
 
 # Build settings
