--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     testCompile "org.mockito:mockito-core:1.+"
 	
 	// Application dependencies for Selenium
-	//compile 'org.slf4j:slf4j-api:1.7.5'
-	//seleniumCompile 'junit:junit:4.11'
+	compile 'org.slf4j:slf4j-api:1.7.5'
+	seleniumCompile 'junit:junit:4.11'
     //seleniumCompile 'org.seleniumhq.selenium:selenium-firefox-driver:3.0.1'
     seleniumCompile 'org.seleniumhq.selenium:selenium-chrome-driver:3.0.1'
 
